<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/cgt_fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/middle"
        android:background="@color/white" >
    </FrameLayout>

    <View
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/cgt_rg_tab"
        android:background="@color/color_dddddd" />

    <RadioGroup
        android:id="@+id/cgt_rg_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/cgt_rb_weixin"
            style="@style/cgt_tabbar"
            android:drawableTop="@drawable/cgt_selector_tabbar_weixin_bg"
            android:text="@string/text_tabbar_weixin" />

        <RadioButton
            android:id="@+id/cgt_rb_addressbook"
            style="@style/cgt_tabbar"
            android:drawableTop="@drawable/cgt_selector_tabbar_addressbook_bg"
            android:text="@string/text_tabbar_addressbook" />

        <RadioButton
            android:id="@+id/cgt_rb_find"
            style="@style/cgt_tabbar"
            android:drawableTop="@drawable/cgt_selector_tabbar_find_bg"
            android:text="@string/text_tabbar_find" />

        <RadioButton
            android:id="@+id/cgt_rb_me"
            style="@style/cgt_tabbar"
            android:drawableTop="@drawable/cgt_selector_tabbar_me_bg"
            android:text="@string/text_tabbar_me" />
    </RadioGroup>

</RelativeLayout>