<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ebebeb"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/cgt_ll_find_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/cgt_selector_find_item_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dip"
        android:paddingTop="8dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:src="@drawable/cgt_find_friends" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/text_find_friends"
            android:textColor="@color/color_353535"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/cgt_ll_find_sweep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cgt_selector_find_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingTop="8dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:src="@drawable/cgt_find_sweep" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/text_find_sweep"
                android:textColor="@color/color_353535"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/color_d9d9d9" />

        <LinearLayout
            android:id="@+id/cgt_ll_find_shake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cgt_selector_find_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingTop="8dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:src="@drawable/cgt_find_shake" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/text_find_shake"
                android:textColor="@color/color_353535"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/cgt_ll_find_nearbyPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cgt_selector_find_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingTop="8dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:src="@drawable/cgt_find_nearbypeople" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/text_find_nearbyPeople"
                android:textColor="@color/color_353535"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/color_d9d9d9" />

        <LinearLayout
            android:id="@+id/cgt_ll_find_driftBottle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cgt_selector_find_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingTop="8dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:src="@drawable/cgt_find_driftbottle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/text_find_driftBottle"
                android:textColor="@color/color_353535"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/cgt_ll_find_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cgt_selector_find_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingTop="8dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:src="@drawable/cgt_find_shopping" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/text_find_shopping"
                android:textColor="@color/color_353535"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/color_d9d9d9" />

        <LinearLayout
            android:id="@+id/cgt_ll_find_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cgt_selector_find_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingTop="8dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:src="@drawable/cgt_find_game" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/text_find_game"
                android:textColor="@color/color_353535"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>