<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ebebeb"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/cgt_ll_me_userInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/cgt_selector_find_item_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/cgt_iv_me_userPic"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="5dip"
            android:src="@drawable/user_picture" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cgt_tv_me_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="深情小建"
                android:textColor="@color/color_353535"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cgt_tv_me_weixinNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="微信号：lijian374452668"
                android:textColor="@color/color_b1b1b1"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/cgt_ib_me_qrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:background="@drawable/cgt_selector_qr_code_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/cgt_ll_me_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cgt_selector_find_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingTop="8dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:src="@drawable/cgt_me_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/text_me_photo"
                android:textColor="@color/color_353535"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@color/color_d9d9d9" />

        <LinearLayout
            android:id="@+id/cgt_ll_me_collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cgt_selector_find_item_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dip"
            android:paddingTop="8dip" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:src="@drawable/cgt_me_collect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/text_me_collect"
                android:textColor="@color/color_353535"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cgt_ll_me_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/cgt_selector_find_item_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dip"
        android:paddingTop="8dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:src="@drawable/cgt_me_wallet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/text_me_wallet"
            android:textColor="@color/color_353535"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cgt_ll_me_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/cgt_selector_find_item_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dip"
        android:paddingTop="8dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:src="@drawable/cgt_me_set" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/text_me_set"
            android:textColor="@color/color_353535"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>